Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-63645

Windows: Application hangs when Native File dialog is used to select "Network" (Place).

XMLWordPrintable

    • d366d6dfd30de6e6f83afc807a4648f008b396e5 (qtbase/5.9, 4.11.2017, 5.9.4)

      When native QFileDialog::getExistingDirectory() is used to select Network drive then that leads to hang the application.

      This can be easily reproducible with:

      C:\Qt\Qt5.9.0\Examples\Qt-5.9\widgets\dialogs\findfiles
      

      Run filedialog example then click on Browse button to open QFileDialog
      Select Network and click Select Folder
      FileDialog application hangs.

        1. qtbug63645.zip
          2 kB
          Friedemann Kleint
        2. qtbug63645_diag.diff
          9 kB
          Friedemann Kleint
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            kleint Friedemann Kleint
            irfan.omair@digia.com Irfan Omair
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes