src/plugins/platforms/windows/qwindowsdialoghelpers.cpp
@@ -1010,7 +1010,9 @@ void QWindowsNativeFileDialogBase::setMode(QFileDialogOptions::FileMode mode,
         break;
     case QFileDialogOptions::Directory:
     case QFileDialogOptions::DirectoryOnly:
-        flags |= FOS_PICKFOLDERS | FOS_FILEMUSTEXIST;
+        // QTBUG-63645: Restrict to file system items, as Qt cannot deal with
+        // places like 'Network', etc.
+        flags |= FOS_PICKFOLDERS | FOS_FILEMUSTEXIST | FOS_FORCEFILESYSTEM;
         break;
     case QFileDialogOptions::ExistingFiles:
         flags |= FOS_FILEMUSTEXIST | FOS_ALLOWMULTISELECT;
@@ -1219,6 +1221,8 @@ void QWindowsNativeFileDialogBase::onSelectionChange()
 {
     const QList<QUrl> current = selectedFiles();
     m_data.setSelectedFiles(current);
+    qDebug() << __FUNCTION__ << current << current.size();
+
     if (current.size() == 1)
         emit currentChanged(current.front());
 }
